--- a/ChatApp/package.json
+++ b/ChatApp/package.json
@@ -14,7 +14,9 @@
     "react-dom": "^18.2.0",
     "react-email-validator": "^1.0.2",
     "react-firebase-hooks": "^5.1.1",
-    "react-icons": "^4.8.0"
+    "react-icons": "^4.8.0",
+    "react-switch": "^7.0.0",
+    "styled-components": "^5.3.9"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
